--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 build
 mods
 resourcepacks
-
-# Ignore shaderpacks folder except for the Complementary Reimagined config
-shaderpacks
-!shaderpacks
-!shaderpacks/ComplementaryReimagined_r5.6.1.zip.txt
+shaderpacks/ComplementaryReimagined_r5.6.1.zip
