Remove xaero update notification

--- a/config/xaero/minimap/client.cfg
+++ b/config/xaero/minimap/client.cfg
@@ -1,5 +1,5 @@
 current_profile = surface_living
-update_notifications = true
+update_notifications = false
 ignored_update = 385
 allow_wrong_world_teleport = false
 differentiate_by_server_address = true
