--- a/config/xaero/world-map/client.cfg
+++ b/config/xaero/world-map/client.cfg
@@ -1,6 +1,6 @@
 current_profile = surface_living
 ignored_update = 183
-update_notifications = true
+update_notifications = false
 reload_viewed = false
 reload_viewed_version = 0
 debug = false
