Add release variable

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -84,7 +84,7 @@ jobs:
           LOADER_TYPE=$(echo "$PK_LOCK" | jq -r '.loaders | keys[0]')
           LOADER_VERSION=$(echo "$PK_LOCK" | jq -r ".loaders.\"$LOADER_TYPE\"")
           NAME=$(echo "$PK_INFO" | jq -r '.name')
-          RELEASE_TYPE=$(echo "$PK_INFO" | jq -r '.release_type')
+          RELEASE_TYPE=release
           CHANGELOG=$(cat CHANGELOG.md || echo "No changelog available")
 
           # Determine version
