--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -58,8 +58,8 @@ jobs:
         run: |
           git fetch --tags
 
-          VERSION=$(grep -m1 '^## ' CHANGELOG.md | sed -E 's/^## \[?([^\]]+)\]?/\1/')
-          
+          VERSION=$(grep -m1 '^## ' CHANGELOG.md | sed -E 's/^## \[([^\]]+)\]/\1/')
+
           if [ -z "$VERSION" ]; then
             echo "Could not determine version from CHANGELOG.md"
             exit 1
