--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -7,8 +7,8 @@ permissions:
 on:
   push:
     branches: [dev, main]
-    paths-ignore:
-      - '.github/workflows/**'
+    # paths-ignore:
+    #   - '.github/workflows/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
