Bypass changelog validation

--- a/.github/workflows/pr-changelog-validation.yml
+++ b/.github/workflows/pr-changelog-validation.yml
@@ -18,9 +18,9 @@ jobs:
         with:
           filters: |
             trigger-release:
-              - 'pakku.json'
-              - 'pakku-lock.json'
-              - '.pakku/**'
+              # - 'pakku.json'
+              # - 'pakku-lock.json'
+              # - '.pakku/**'
               - 'configs/**'
               - 'shaderpacks/**'
 
